heimdall/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: misc
spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
