heimdall/02-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
  namespace: misc
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - match: Host(`heimdall.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: heimdall-service
      port: https
      serversTransport: heimdall-transport
